# stick-fighter

./: README.md
Stick Fighter/Brawl/: CMakeLists.txt  CMakeLists.txt.user.ad7fd67  bonhomme.cpp  bonhomme.h  main.cpp  utils.cpp  utils.h
Stick Fighter/build-Brawl-Desktop_Qt_5_11_1_clang_64bit-Du00e9faut/: Brawl  Brawl.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
